fixed layout bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,8 @@
           box-sizing: border-box;
 }
  html, body {
-    min-height: 100%;
+    /*min-height: 100%;*/
+    height: 100%
 }
 body {
     background-color: #EFECCA;
@@ -162,6 +163,7 @@ a:visited {
     min-height: 100%;
     height: auto;
     box-sizing:border-box;
+    background-color: #EFECCA
 }
 main {
     padding: 40px 20px;
